[gd_scene load_steps=26 format=3 uid="uid://dsmwcwtpe4cni"]

[ext_resource type="PackedScene" uid="uid://d2nvjfxk0ropj" path="res://taco/taco.tscn" id="1_1tf14"]
[ext_resource type="PackedScene" uid="uid://b2ft8po6xu77b" path="res://land/land.tscn" id="1_jcuqo"]
[ext_resource type="Script" path="res://levels/river_enter/river/river.gd" id="1_terlw"]
[ext_resource type="PackedScene" uid="uid://do8f436xagsiy" path="res://gui/screen_transitions/fade_black.tscn" id="3_s56se"]
[ext_resource type="Script" path="res://levels/river_enter/river/parallax_2d.gd" id="3_uis34"]
[ext_resource type="Texture2D" uid="uid://bsj41mbkhyew6" path="res://levels/river_enter/river/sprites/waterfall_closeup.jpg" id="5_3olem"]
[ext_resource type="Texture2D" uid="uid://bvlmgm5tul4jf" path="res://levels/jungle_level/sprites/360_F_512159585_ATwDiLuOxD4YwQsEi2T0afWIzceddHsx-removebg-preview_1_-removebg-preview.png" id="7_ce4gh"]
[ext_resource type="Texture2D" uid="uid://c2og30l0otgeo" path="res://levels/jungle_level/sprites/5122e5ac7d77d28c1015c449c5bf0ff6-removebg-preview.png" id="8_22vco"]
[ext_resource type="PackedScene" uid="uid://c8ida3dkuhtec" path="res://platforms/river_waterfall/river_rock_2.tscn" id="8_bl4a8"]
[ext_resource type="Texture2D" uid="uid://cr3up8qcjyuu6" path="res://levels/jungle_level/sprites/butterfly_chrysalis_edit.png" id="8_ill8y"]
[ext_resource type="AudioStream" uid="uid://b3uvtfqae00ku" path="res://audio/sfx/Waterfall - SFX - SOUND Effects.mp3" id="9_n0kkp"]
[ext_resource type="PackedScene" uid="uid://cr6oyy4m7l0q4" path="res://levels/jungle_level/rock_cliff/rock_cliff.tscn" id="10_kwnlj"]
[ext_resource type="AudioStream" uid="uid://dvi4hu8s52nfg" path="res://audio/sfx/wing_flap_edit.mp3" id="10_tltc5"]
[ext_resource type="AudioStream" uid="uid://d4f2oiqn6nsyl" path="res://audio/music/los_cantadores_intro_p2.mp3" id="11_2ywef"]
[ext_resource type="Texture2D" uid="uid://cgcskghdefymb" path="res://levels/jungle_level/sprites/sharp_rock_cliff.png" id="11_30ckp"]
[ext_resource type="PackedScene" uid="uid://d0dxh2krrk25w" path="res://platforms/river_waterfall/river_rock_1.tscn" id="16_6ndlo"]
[ext_resource type="Script" path="res://levels/river_enter/river/river_ride_enter.gd" id="17_nomcm"]
[ext_resource type="Texture2D" uid="uid://0e4fbi3ur7i6" path="res://levels/arrows/wooden_arrow-removebg-preview.png" id="20_f8bnm"]
[ext_resource type="PackedScene" uid="uid://etwbd3iquu7x" path="res://collectibles/coins/coin.tscn" id="20_myjr6"]
[ext_resource type="Script" path="res://levels/river_enter/river/river_ride_secret_enter.gd" id="20_ymqbs"]
[ext_resource type="Script" path="res://levels/river_enter/river/river_arrow.gd" id="21_loban"]
[ext_resource type="PackedScene" uid="uid://bwqjxr64gc2us" path="res://interaction/interaction_area/interaction_area.tscn" id="22_s8nxj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvoly"]
size = Vector2(72, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4exyj"]
size = Vector2(32, 98)

[sub_resource type="CircleShape2D" id="CircleShape2D_5jq3c"]
radius = 211.179

[node name="Waterfall" type="Node2D"]
script = ExtResource("1_terlw")

[node name="Taco" parent="." instance=ExtResource("1_1tf14")]
position = Vector2(464, 923)

[node name="CanvasLayer" parent="." instance=ExtResource("3_s56se")]

[node name="WaterfallFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_n0kkp")
volume_db = 4.0
autoplay = true

[node name="LeafWall" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-145, -145)
scale = Vector2(1.62353, 0.822222)
texture = ExtResource("7_ce4gh")

[node name="LeafWall2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-641, 98)
rotation = 0.295962
scale = Vector2(2.18824, 1)
texture = ExtResource("7_ce4gh")

[node name="LeafWall3" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-109, 746)
rotation = 0.295962
scale = Vector2(2.18824, 1)
texture = ExtResource("7_ce4gh")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="ChrysallisBridge" type="Sprite2D" parent="StaticBody2D"]
z_index = 2
position = Vector2(295, 871)
rotation = 1.68477
scale = Vector2(0.136773, 0.248827)
texture = ExtResource("8_ill8y")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(295, 871)
rotation = 1.68477
scale = Vector2(0.136773, 0.248827)
polygon = PackedVector2Array(73.2603, -506.816, 106.605, -504.846, -131.632, -236.643, -149.842, -211.017, -97.2661, 417.664, -81.9038, 590.223, -15.3926, 704.771, 60.168, 770.265, -36.7915, 711.137, -102.607, 592.815, -128.409, 476.857, -129.915, 411.922, -120.461, 397.222, -139.822, 136.693, -163.244, -28.7125, -175.126, -220.139, -87.2642, -367.53, 2.79932, -453.759)

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
offset_left = 121.0
offset_top = 848.0
offset_right = 306.0
offset_bottom = 901.0
rotation = 0.0622387
color = Color(1, 1, 1, 0.490196)

[node name="SingleLeaf" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SingleLeaf"]
z_index = 1
position = Vector2(-221, 64)
rotation = 1.6651
scale = Vector2(0.217391, 0.198895)
texture = ExtResource("8_22vco")

[node name="Sprite2D2" type="Sprite2D" parent="SingleLeaf"]
z_index = 1
position = Vector2(-304, 41)
rotation = -2.79195
scale = Vector2(0.217391, 0.198895)
texture = ExtResource("8_22vco")

[node name="Sprite2D3" type="Sprite2D" parent="SingleLeaf"]
z_index = 1
position = Vector2(-341, 15)
rotation = -2.67847
scale = Vector2(0.217391, 0.198895)
texture = ExtResource("8_22vco")

[node name="Sprite2D4" type="Sprite2D" parent="SingleLeaf"]
z_index = 1
position = Vector2(-390, 21)
rotation = 2.53988
scale = Vector2(0.217391, 0.198895)
texture = ExtResource("8_22vco")

[node name="Sprite2D5" type="Sprite2D" parent="SingleLeaf"]
z_index = 1
position = Vector2(-438, -1.99999)
rotation = -2.87911
scale = Vector2(0.217391, 0.198895)
texture = ExtResource("8_22vco")

[node name="Sprite2D6" type="Sprite2D" parent="SingleLeaf"]
z_index = 1
position = Vector2(-329, -36)
rotation = -2.87911
scale = Vector2(0.217391, 0.198895)
texture = ExtResource("8_22vco")

[node name="Land2" parent="." instance=ExtResource("1_jcuqo")]
position = Vector2(-30, -4)

[node name="Polygon2D" parent="Land2" index="0"]
polygon = PackedVector2Array(-105, -151, -61, -47, -48, -10, -135, 90, -202, 78, -443, -39, -656, -70, -702, 80, -613, 243, -316, 356, -333, 389, -350, 409, -532, 407, -707, 403, -694, 269, -709, 81, -605, -258, -259, -261, -68, -259)

[node name="Line2D" parent="Land2" index="1"]
points = PackedVector2Array(-105, -151, -61, -47, -48, -10, -135, 90, -202, 78, -443, -39, -656, -70, -702, 80, -613, 243, -316, 356, -333, 389, -350, 409, -532, 407, -707, 403, -694, 269, -709, 81, -605, -258, -259, -261, -68, -259, -105, -151)

[node name="Parallax2D" type="Parallax2D" parent="."]
z_index = -2
scroll_offset = Vector2(479, 632)
script = ExtResource("3_uis34")

[node name="ForestBG" type="Sprite2D" parent="Parallax2D"]
z_index = -1
position = Vector2(-555, -48)
scale = Vector2(0.454, 0.283667)
texture = ExtResource("5_3olem")

[node name="Land" parent="." instance=ExtResource("1_jcuqo")]
visible = false

[node name="Polygon2D" parent="Land" index="0"]
rotation = -0.000398951
polygon = PackedVector2Array(400.63, 928.16, 429, 962, 381, 971, 71, 943, 72.6481, 882.029, 266.637, 911.106, 322.636, 913.129, 367.635, 914.147)

[node name="Line2D" parent="Land" index="1"]
points = PackedVector2Array(400.63, 928.16, 429, 962, 381, 971, 71, 943, 72.6481, 882.029, 266.637, 911.106, 322.636, 913.129, 367.635, 914.147, 400.63, 928.16)

[node name="Land3" parent="." instance=ExtResource("1_jcuqo")]
position = Vector2(-122, 866)

[node name="Polygon2D" parent="Land3" index="0"]
polygon = PackedVector2Array(-101, -32, 98, 16, 68, 105, -223, 10, -130, -286, 181, -297, 171, -193, -79, -167)

[node name="Line2D" parent="Land3" index="1"]
points = PackedVector2Array(-101, -32, 98, 16, 68, 105, -223, 10, -130, -286, 181, -297, 171, -193, -79, -167, -101, -32)

[node name="Land4" parent="." instance=ExtResource("1_jcuqo")]
visible = false

[node name="Polygon2D" parent="Land4" index="0"]
polygon = PackedVector2Array(165, 839, 192, 841, 251, 846, 351, 853, 383, 867, 413, 889, 416, 883, 385, 863, 352, 848, 251, 843, 193, 838, 165, 836, 133, 841, 116, 847, 118, 850, 138, 843)

[node name="Line2D" parent="Land4" index="1"]
points = PackedVector2Array(165, 839, 192, 841, 251, 846, 351, 853, 383, 867, 413, 889, 416, 883, 385, 863, 352, 848, 251, 843, 193, 838, 165, 836, 133, 841, 116, 847, 118, 850, 138, 843, 165, 839)

[node name="RiverRock" type="Node" parent="."]

[node name="RiverRock1" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(754, 938)
rotation = -0.40734

[node name="RiverRock9" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(596, -175)
rotation = -0.0259388

[node name="RiverRock3" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(629, 953)
rotation = -0.221923

[node name="RiverRock4" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(672, 946)
rotation = -0.078037

[node name="RiverRock25" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(712, 945)
rotation = -0.078037

[node name="RiverRock20" parent="RiverRock" instance=ExtResource("8_bl4a8")]
position = Vector2(91, 43)

[node name="RiverRock27" parent="RiverRock" instance=ExtResource("8_bl4a8")]
position = Vector2(136, -32)

[node name="RiverRock21" parent="RiverRock" instance=ExtResource("8_bl4a8")]
position = Vector2(37, 109)

[node name="RiverRock22" parent="RiverRock" instance=ExtResource("8_bl4a8")]
position = Vector2(134, 155)
rotation = -0.393726

[node name="RiverRock8" parent="RiverRock" instance=ExtResource("8_bl4a8")]
position = Vector2(59, 897)
rotation = 0.120157

[node name="RiverRock26" parent="RiverRock" instance=ExtResource("8_bl4a8")]
position = Vector2(6, 893)
rotation = -0.00447302

[node name="RiverRock5" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(454, 967)
rotation = 0.0717402

[node name="RiverRock23" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(417, 947)
rotation = 0.830328

[node name="RiverRock6" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(541, 967)
rotation = 0.0708261

[node name="RiverRock24" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(586, 962)
rotation = -0.254804

[node name="RiverRock7" parent="RiverRock" instance=ExtResource("16_6ndlo")]
position = Vector2(498, 966)
rotation = -0.102421

[node name="RockCliffs" type="Node" parent="."]

[node name="RockCliff" parent="RockCliffs" instance=ExtResource("10_kwnlj")]
position = Vector2(823, 849)
rotation = -0.581722

[node name="RockCliff8" parent="RockCliffs" instance=ExtResource("10_kwnlj")]
position = Vector2(302, -91)
rotation = -0.0160764

[node name="RockCliff9" parent="RockCliffs" instance=ExtResource("10_kwnlj")]
position = Vector2(467, -110)
rotation = -0.618841

[node name="RockCliff3" parent="RockCliffs" instance=ExtResource("10_kwnlj")]
position = Vector2(26, 283)
rotation = -0.43564

[node name="Sprite2D2" type="Sprite2D" parent="RockCliffs/RockCliff3"]
position = Vector2(5.5839, 87.5318)
rotation = 2.7805
scale = Vector2(0.618378, 0.605096)
texture = ExtResource("11_30ckp")

[node name="Sprite2D3" type="Sprite2D" parent="RockCliffs/RockCliff3"]
position = Vector2(-155.804, 59.8411)
rotation = 3.12548
scale = Vector2(0.618378, 0.605096)
texture = ExtResource("11_30ckp")

[node name="RockCliff6" parent="RockCliffs" instance=ExtResource("10_kwnlj")]
position = Vector2(197, -11)
rotation = -1.38538

[node name="Sprite2D2" type="Sprite2D" parent="RockCliffs/RockCliff6"]
position = Vector2(5.5839, 87.5318)
rotation = 2.7805
scale = Vector2(0.618378, 0.605096)
texture = ExtResource("11_30ckp")

[node name="Sprite2D3" type="Sprite2D" parent="RockCliffs/RockCliff6"]
position = Vector2(-155.804, 59.8411)
rotation = 3.12548
scale = Vector2(0.618378, 0.605096)
texture = ExtResource("11_30ckp")

[node name="RockCliff7" parent="RockCliffs" instance=ExtResource("10_kwnlj")]
position = Vector2(190, 209)
rotation = -1.38538

[node name="Sprite2D2" type="Sprite2D" parent="RockCliffs/RockCliff7"]
position = Vector2(5.5839, 87.5318)
rotation = 2.7805
scale = Vector2(0.618378, 0.605096)
texture = ExtResource("11_30ckp")

[node name="Sprite2D3" type="Sprite2D" parent="RockCliffs/RockCliff7"]
position = Vector2(-155.804, 59.8411)
rotation = 3.12548
scale = Vector2(0.618378, 0.605096)
texture = ExtResource("11_30ckp")

[node name="RockCliff4" parent="RockCliffs" instance=ExtResource("10_kwnlj")]
position = Vector2(-120, 328)
rotation = -0.198441

[node name="RockCliff5" parent="RockCliffs" instance=ExtResource("10_kwnlj")]
position = Vector2(-285, 365)
rotation = -0.198441

[node name="RockCliff2" parent="RockCliffs" instance=ExtResource("10_kwnlj")]
position = Vector2(738, -193)
rotation = 2.88136

[node name="CollisionPolygon2D" parent="RockCliffs/RockCliff2" index="1"]
polygon = PackedVector2Array(-99.189, 30.5048, -89.8057, -28.0524, -29, -42, -6, -41, 9, -33, 33, -32, 56, -24, 78, -29, 107, -17, 119, -10, 127, 5, 113, 29, 95, 40, 51.8729, 50.032, 33.707, 48.2995, 24.5585, 43.7936, 9.99487, 28.5325, -14.3521, 34.4676, -34.3191, 39.4993, -73.2925, 34.2959, -105.267, 142.719, -119.7, 134.737)
one_way_collision = false

[node name="Sprite2D2" type="Sprite2D" parent="RockCliffs/RockCliff2"]
position = Vector2(-130.546, 66.6541)
rotation = -0.931669
scale = Vector2(0.618378, 0.605096)
texture = ExtResource("11_30ckp")
flip_h = true

[node name="WingFlapFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(725, 293)
stream = ExtResource("10_tltc5")

[node name="MusicTransition" type="AudioStreamPlayer2D" parent="."]
position = Vector2(757, 197)
stream = ExtResource("11_2ywef")

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(79, 8)

[node name="Coin12" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(135, -77)

[node name="Coin2" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(124, 129)

[node name="Coin3" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(41, 71)

[node name="Coin4" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(-239, 297)

[node name="Coin7" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(-70, 273)

[node name="Coin8" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(-160, 279)

[node name="Coin5" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(-308, 303)

[node name="Coin6" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(-369, 308)

[node name="Coin9" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(647, 928)

[node name="Coin10" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(588, 937)

[node name="Coin11" parent="Coins" instance=ExtResource("20_myjr6")]
position = Vector2(533, 940)

[node name="RiverRideEnter" type="Area2D" parent="."]
position = Vector2(-521, 177)
collision_layer = 0
collision_mask = 2
script = ExtResource("17_nomcm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RiverRideEnter"]
shape = SubResource("RectangleShape2D_fvoly")

[node name="RiverRideSecretEnter" type="Area2D" parent="."]
position = Vector2(-43, 820)
collision_layer = 0
collision_mask = 2
script = ExtResource("20_ymqbs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RiverRideSecretEnter"]
shape = SubResource("RectangleShape2D_4exyj")

[node name="Arrows" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Arrows"]
z_index = -1
position = Vector2(310, -144)
scale = Vector2(0.148, 0.12)
texture = ExtResource("20_f8bnm")
flip_h = true

[node name="Sprite2D3" type="Sprite2D" parent="Arrows"]
z_index = -1
position = Vector2(539, -205)
scale = Vector2(0.148, 0.12)
texture = ExtResource("20_f8bnm")
flip_h = true
script = ExtResource("21_loban")

[node name="InteractionArea" parent="Arrows/Sprite2D3" instance=ExtResource("22_s8nxj")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arrows/Sprite2D3/InteractionArea"]
shape = SubResource("CircleShape2D_5jq3c")

[node name="Sprite2D2" type="Sprite2D" parent="Arrows"]
z_index = -1
position = Vector2(13, 231)
scale = Vector2(0.148, 0.12)
texture = ExtResource("20_f8bnm")
flip_h = true

[node name="Sprite2D4" type="Sprite2D" parent="Arrows"]
z_index = -1
position = Vector2(-292, 310)
scale = Vector2(0.148, 0.12)
texture = ExtResource("20_f8bnm")
flip_h = true

[node name="Sprite2D5" type="Sprite2D" parent="Arrows"]
z_index = -1
position = Vector2(31, 864)
scale = Vector2(0.148, 0.12)
texture = ExtResource("20_f8bnm")
flip_h = true

[connection signal="body_entered" from="RiverRideEnter" to="RiverRideEnter" method="_on_body_entered"]
[connection signal="river_ride_enter_from_waterfall" from="RiverRideEnter" to="." method="_on_river_ride_enter_river_ride_enter_from_waterfall"]
[connection signal="body_entered" from="RiverRideSecretEnter" to="RiverRideSecretEnter" method="_on_body_entered"]

[editable path="Taco"]
[editable path="CanvasLayer"]
[editable path="Land2"]
[editable path="Land"]
[editable path="Land3"]
[editable path="Land4"]
[editable path="RockCliffs/RockCliff3"]
[editable path="RockCliffs/RockCliff6"]
[editable path="RockCliffs/RockCliff7"]
[editable path="RockCliffs/RockCliff2"]
